classDiagram
    class PlayerInfo {
        +i64 id
        +String first_name
        +String last_name
        +u8 age
        +u8 uniform_number
    }

    class OffenseSkills {
        +Option~BatterInfo~ batter
        +RunningSkills running
    }

    class BatterInfo {
        +RL batting_side
        +f64 swing_speed
        +f32 weight_pull
        +f32 weight_center
        +f32 weight_opposite
        +f32 weight_foul_left
        +f32 weight_foul_right
    }

    class RunningSkills {
        +f64 speed
        +f64 lead_distance
        +f64 start_reaction
    }

    class DefenseSkills {
        +Position primary_position
        +Option~PitcherInfo~ pitcher
        +Option~CatcherInfo~ catcher
        +Option~FielderInfo~ middle_infielder
        +Option~FielderInfo~ corner_infielder
        +Option~FielderInfo~ outfielder
    }

    class FielderInfo {
        +f64 throw_speed
        +f64 running_speed
        +f64 reaction
        +f64 prep_time
    }

    class CatcherInfo {
        +f64 prep_time
        +f64 throw_speed
    }

    class Player {
        +PlayerInfo info
        +OffenseSkills offense_skills
        +DefenseSkills defense_skills
    }

    class FullName {
        +String first
        +String last
    }

    class ActiveFielder {
        +Position position
        +usize player_id
        +FielderInfo info
        +PolarPosition polar_position
    }

    class ActiveRunner {
        +Runner runner
        +Base current_base
    }

    class NormalParam {
        +f64 mean
        +f64 std_dev
        +f64 skew
        +f64 coefficient
        +f64 offset
    }

    class GammaParam {
        +f64 shape
        +f64 scale
        +f64 offset
    }

    class ItemWeighted~T~ {
        +T name
        +f64 weight
    }

    class PlayerInfoProbs {
        +GammaParam age
    }

    class RunningSkillProbs {
        +NormalParam speed
        +NormalParam lead_distance
        +NormalParam start_reaction
    }

    class BatterInfoProbs {
        +Vec~ItemWeighted(RL)~ batting_side
        +NormalParam swing_speed
        +Vec~ItemWeighted(HitterTendency)~ hitter_tendency
    }

    class FielderInfoProbs {
        +Vec~ItemWeighted(FielderType)~ fielder_type
        +NormalParam throw_speed
        +NormalParam running_speed
        +NormalParam reaction
        +NormalParam prep_time
    }

    class PitcherInfo {
        +PitcherStyle pitcher_style
        +f64 mod_velocity
        +f64 mod_control
        +f64 mod_stamina
        +f64 mod_injury_proneness
        +f64 mod_clutch
        +f64 mod_hpp
        +f64 mod_platoon_splitting
        +f64 delivery_motion_time
        +Vec~PitchSkill~ pitch_skills
    }

    class PitcherInfoProbs {
        +Vec~ItemWeighted(PitcherStyle)~ pitcher_style
        +NormalParam velocity
        +NormalParam control
        +NormalParam stamina
        +NormalParam injury_proneness
        +NormalParam clutch
        +NormalParam hpp
        +NormalParam platoon_splitting
        +NormalParam delivery_motion_time
    }

    class PitchSkill {
        +PitchType pitch_type
        +f64 mod_velocity
        +f64 mod_control
        +f64 mod_stamina
        +f64 mod_injury_proneness
        +f64 mod_stuff
        +f64 mod_fb
        +f64 mod_gp
        +f64 mod_horizontal_movement
        +f64 mod_vertical_movement
        +f64 mod_spin_rate
        +f64 mod_usage
    }

    class PitchSkillProbs {
        +NormalParam velocity
        +NormalParam control
        +NormalParam stamina
        +NormalParam injury_proneness
        +NormalParam stuff
        +NormalParam fb
        +NormalParam gp
        +NormalParam horizontal_movement
        +NormalParam vertical_movement
        +NormalParam spin_rate
        +NormalParam usage
    }

    class League {
        +u16 id
        +String name
        +Vec~Team~ teams
    }

    class Team {
        +u16 id
        +String name
        +Vec~Player~ players
    }

    class Standing {
        +Team team
        +u16 games
        +u16 wins
        +u16 losses
        +u16 draws
        +f32 pct
        +f32 gb
        +u16 r
        +u16 ra
    }

    class GameSeason {
        +NaiveDate start_date
        +u16 season
    }

    class GameScheduler {
        +u32 id
        +u16 season
        +u16 round_seq
        +u16 seq
        +NaiveDate planned_date
        +Team away_team
        +Team home_team
        +GameType game_type
    }

    class GameHeader {
        +u32 id
        +NaiveDate actual_date
        +Team away_team
        +Team home_team
        +GameType game_type
        +u8 away_points
        +u8 home_points
    }

    class GameResult {
        +u32 id
        +NaiveDate actual_date
        +Vec~Inning~ innings
        +u8 away_points
        +u8 home_points
        +Vec~BattingOrderHistory~ batting_order_histories
    }

    class GameRow {
        +u32 id
        +u16 season
        +u16 round_seq
        +u16 seq
        +NaiveDate planned_date
        +NaiveDate actual_date
        +Team away_team
        +Team home_team
        +GameType game_type
        +Vec~Inning~ innings
        +u8 away_points
        +u8 home_points
    }

    class Inning {
        +u8 seq
        +TB tb
        +Vec~Count~ counts
    }

    class Count {
        +u8 seq
        +u8 bases_occupied
        +BattingResult result
        +u8 point
        +u8 out
    }

    class GameState {
        +u8 inning_seq
        +TB inning_tb
        +u8 away_total_point
        +u8 home_total_point
        +Lineup away_lineup
        +Lineup home_lineup
    }

    class InningState {
        +u8 count_seq
        +u8 bases_occupied
        +u8 out
    }

    class Lineup {
        +usize current_index
        +Vec~BattingOrder~ batters
    }

    class BattingOrder {
        +u8 index
        +Position position
        +Player player
    }

    class BattingOrderHistory {
        +u8 start_inning_seq
        +TB start_inning_tb
        +u8 start_count_seq
        +Option~u8~ end_inning_seq
        +Option~TB~ end_inning_tb
        +Option~u8~ end_count_seq
        +u16 team_id
        +u8 index
        +Position position
        +u32 player_id
    }

    class GameCursor {
        -Arc~GameRow~ game
        +u8 inning_seq
        +TB inning_tb
        +u8 count_seq
        +bool is_last_bottom_inning_skiped
    }

    class ScoreBoard {
        +String away_team_name
        +String home_team_name
        +u8 max_inning_num
        +u8 away_total_point
        +u8 home_total_point
        +Vec~u8~ away_innning_points
        +Vec~u8~ home_innning_points
        +bool is_last_bottom_inning_skiped
    }

    class BattingStats {
        +Player batter
        +u16 ab
        +u16 single
        +u16 double
        +u16 triple
        +u16 homerun
        +f32 ba
        +f32 rbi
    }

    class RL {
        <<enumeration>>
        Right
        Left
    }

    class HitterTendency {
        <<enumeration>>
        Pull
        Center
        Opposite
        FoulLeft
        FoulRight
    }

    class FielderType {
        <<enumeration>>
        MiddleInfielder
        CornerInfielder
        Outfielder
    }

    class PitchType {
        <<enumeration>>
        FourSeamFastball
        TwoSeamFastball
        Cutter
        Curveball
        Slider
        Sweeper
        Changeup
        Forkball
        SplitFingerFastball
        Knuckleball
    }

    class PitcherStyle {
        <<enumeration>>
        PowerPitcher
        FinessePitcher
        BalancedPitcher
    }

    class Position {
        <<enumeration>>
        P
        C
        FB
        SB
        TB
        SS
        LF
        CF
        RF
        DH
    }

    class TB {
        <<enumeration>>
        Top
        Bottom
    }

    class BattingResult {
        <<enumeration>>
        Single
        Double
        Triple
        HomeRun
        Out
        FieldersChoice
    }

    class Ruling {
        <<enumeration>>
        Out
        Safe
    }

    class GameError {
        <<enumeration>>
        SameTargetBase
        BatterRunner
        Runner1st
        Runner2nd
        Runner3rd
        BatterRunnerTargetBase
        DoublePlayTargetBase
        StealTargetBase
        UnsupportedPath
        NoPlayerFor(String)
    }

    class GameProgress {
        <<enumeration>>
        Ongoing
        WalkOff
        GameSet
        Postponed
    }

    class InningProgress {
        <<enumeration>>
        Ongoing
        HalfInningOver
    }

    class GameType {
        <<enumeration>>
        Exhibition
        Regular
        Postseason
    }

    Player *-- PlayerInfo : info
    Player *-- OffenseSkills : offense_skills
    Player *-- DefenseSkills : defense_skills
    OffenseSkills --> BatterInfo : batter
    OffenseSkills *-- RunningSkills : running
    DefenseSkills --> PitcherInfo : pitcher
    DefenseSkills --> CatcherInfo : catcher
    DefenseSkills --> FielderInfo : middle_infielder
    DefenseSkills --> FielderInfo : corner_infielder
    DefenseSkills --> FielderInfo : outfielder
    DefenseSkills --> Position : primary_position
    BatterInfo --> RL : batting_side
    PitcherInfo --> PitcherStyle : pitcher_style
    PitcherInfo "1" --> "0..*" PitchSkill : pitch_skills
    PitchSkill --> PitchType : pitch_type

    ActiveFielder *-- FielderInfo : info
    ActiveFielder --> Position : position

    PlayerInfoProbs *-- GammaParam : age
    RunningSkillProbs *-- NormalParam : speed
    RunningSkillProbs *-- NormalParam : lead_distance
    RunningSkillProbs *-- NormalParam : start_reaction
    BatterInfoProbs --> ItemWeighted : batting_side
    BatterInfoProbs *-- NormalParam : swing_speed
    BatterInfoProbs --> ItemWeighted : hitter_tendency
    FielderInfoProbs --> ItemWeighted : fielder_type
    FielderInfoProbs *-- NormalParam : throw_speed
    FielderInfoProbs *-- NormalParam : running_speed
    FielderInfoProbs *-- NormalParam : reaction
    FielderInfoProbs *-- NormalParam : prep_time
    PitcherInfoProbs --> ItemWeighted : pitcher_style
    PitcherInfoProbs *-- NormalParam : velocity
    PitcherInfoProbs *-- NormalParam : control
    PitcherInfoProbs *-- NormalParam : stamina
    PitcherInfoProbs *-- NormalParam : injury_proneness
    PitcherInfoProbs *-- NormalParam : clutch
    PitcherInfoProbs *-- NormalParam : hpp
    PitcherInfoProbs *-- NormalParam : platoon_splitting
    PitcherInfoProbs *-- NormalParam : delivery_motion_time
    PitchSkillProbs *-- NormalParam : velocity
    PitchSkillProbs *-- NormalParam : control
    PitchSkillProbs *-- NormalParam : stamina
    PitchSkillProbs *-- NormalParam : injury_proneness
    PitchSkillProbs *-- NormalParam : stuff
    PitchSkillProbs *-- NormalParam : fb
    PitchSkillProbs *-- NormalParam : gp
    PitchSkillProbs *-- NormalParam : horizontal_movement
    PitchSkillProbs *-- NormalParam : vertical_movement
    PitchSkillProbs *-- NormalParam : spin_rate
    PitchSkillProbs *-- NormalParam : usage

    League "1" --> "0..*" Team : teams
    Team "1" --> "0..*" Player : players
    Standing --> Team : team

    GameScheduler --> Team : away_team
    GameScheduler --> Team : home_team
    GameScheduler --> GameType : game_type

    GameHeader --> Team : away_team
    GameHeader --> Team : home_team
    GameHeader --> GameType : game_type

    GameResult "1" --> "0..*" Inning : innings
    GameResult "1" --> "0..*" BattingOrderHistory : batting_order_histories

    GameRow --> Team : away_team
    GameRow --> Team : home_team
    GameRow --> GameType : game_type
    GameRow "1" --> "0..*" Inning : innings

    Inning --> TB : tb
    Inning "1" --> "0..*" Count : counts
    Count --> BattingResult : result

    GameState --> TB : inning_tb
    GameState --> Lineup : away_lineup
    GameState --> Lineup : home_lineup

    InningState --> InningProgress : progress

    Lineup "1" --> "1..*" BattingOrder : batters
    BattingOrder --> Position : position
    BattingOrder --> Player : player

    BattingOrderHistory --> TB : start_inning_tb
    BattingOrderHistory --> TB : end_inning_tb
    BattingOrderHistory --> Position : position

    GameCursor --> TB : inning_tb

    BattingStats --> Player : batter
